Updated PlayerDisplay to Razor and add @inherits to Razor components to fix some broken intellisense. Getting the hang of this...

--- a/code/ui/PlayerDisplay.scss
+++ b/code/ui/PlayerDisplay.scss
@@ -62,13 +62,11 @@
             transition: all 0.2s ease;
             width: 100%;
 
-
             .time-remaining-progress {
                 background-color: #43AC4E;
                 border-radius: 8px;
                 height: 8px;
                 transition: all 0.2s ease;
-                width: 100%;
             }
         }
 
